Cherry-pick r288223. rdar://problem/87741289

Assertion is not acquired in network process when setting database journal mode
    https://bugs.webkit.org/show_bug.cgi?id=235340

    Setting database journal mode requires lock, so network process needs to stay active by holding assertion.

    Reviewed by Chris Dumez.

    * platform/sql/SQLiteDatabase.cpp:
    (WebCore::SQLiteDatabase::useWALJournalMode):

    Canonical link: https://commits.webkit.org/246183@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288223 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.106@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@289286 268f45cc-cd09-0410-ab3c-d52691b4dbfc